// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test home route 1`] = `
.lights-9 {
  width: 500px;
  margin: 0 auto;
  padding: 15px;
  text-align: center;
}

.lights-12 {
  width: 500px;
  margin: 15px auto;
}

.lights-4 {
  display: inline-block;
}

.lights-1 {
  padding: 15px;
  color: #00a68f;
  font-size: 18px;
}

.lights-0 {
  display: block;
  width: 252px;
  height: 252px;
  margin: 15px auto;
  background: url(file-stub);
}

.lights-10 + .lights-10 {
  padding-top: 15px;
}

<Capture
  report={[Function]}
>
  <StaticRouter
    context={Object {}}
    location="/"
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      staticContext={Object {}}
    >
      <App>
        <div>
          <i
            className="lights-0"
          />
          <ul
            className="lights-9"
          >
            <li
              className="lights-4"
            >
              <Link
                className="lights-1"
                to="/"
              >
                <LinkAnchor
                  className="lights-1"
                  href="/"
                  navigate={[Function]}
                >
                  <a
                    className="lights-1"
                    href="/"
                    onClick={[Function]}
                  >
                    Home
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li
              className="lights-4"
            >
              <Link
                className="lights-1"
                to="/tools"
              >
                <LinkAnchor
                  className="lights-1"
                  href="/tools"
                  navigate={[Function]}
                >
                  <a
                    className="lights-1"
                    href="/tools"
                    onClick={[Function]}
                  >
                    Tools
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
          <div
            className="lights-12"
          >
            <Switch>
              <Route
                component={[Function]}
                computedMatch={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                exact={true}
                location={
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  }
                }
                path="/"
              >
                <LoadableComponent
                  history={
                    Object {
                      "action": "POP",
                      "block": [Function],
                      "createHref": [Function],
                      "go": [Function],
                      "goBack": [Function],
                      "goForward": [Function],
                      "listen": [Function],
                      "location": Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                      "push": [Function],
                      "replace": [Function],
                    }
                  }
                  location={
                    Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    }
                  }
                  match={
                    Object {
                      "isExact": true,
                      "params": Object {},
                      "path": "/",
                      "url": "/",
                    }
                  }
                  staticContext={Object {}}
                >
                  <Home
                    history={
                      Object {
                        "action": "POP",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      }
                    }
                    location={
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      }
                    }
                    match={
                      Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/",
                        "url": "/",
                      }
                    }
                    staticContext={Object {}}
                  >
                    <section>
                      <p
                        className="lights-10"
                      >
                        Welcome to the 
                        <strong>
                          Universal React Starter-kyt
                        </strong>
                        . This starter kyt should serve as the base for an advanced, server-rendered React app.
                      </p>
                      <p
                        className="lights-10"
                      >
                        Check out the Tools section for an outline of the libraries that are used in this Starter-kyt.
                      </p>
                    </section>
                  </Home>
                </LoadableComponent>
              </Route>
            </Switch>
          </div>
        </div>
      </App>
    </Router>
  </StaticRouter>
</Capture>
`;

exports[`Test home route 2`] = `
Array [
  "../Home",
]
`;

exports[`Test tools route 1`] = `
.lights-9 {
  width: 500px;
  margin: 0 auto;
  padding: 15px;
  text-align: center;
}

.lights-15 {
  width: 500px;
  margin: 15px auto;
}

.lights-4 {
  display: inline-block;
}

.lights-1 {
  padding: 15px;
  color: #00a68f;
  font-size: 18px;
}

.lights-0 {
  display: block;
  width: 252px;
  height: 252px;
  margin: 15px auto;
  background: url(file-stub);
}

.lights-10 + .lights-10 {
  padding-top: 5px;
}

<Capture
  report={[Function]}
>
  <StaticRouter
    context={Object {}}
    location="/tools"
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/tools",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      staticContext={Object {}}
    >
      <App>
        <div>
          <i
            className="lights-0"
          />
          <ul
            className="lights-9"
          >
            <li
              className="lights-4"
            >
              <Link
                className="lights-1"
                to="/"
              >
                <LinkAnchor
                  className="lights-1"
                  href="/"
                  navigate={[Function]}
                >
                  <a
                    className="lights-1"
                    href="/"
                    onClick={[Function]}
                  >
                    Home
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li
              className="lights-4"
            >
              <Link
                className="lights-1"
                to="/tools"
              >
                <LinkAnchor
                  className="lights-1"
                  href="/tools"
                  navigate={[Function]}
                >
                  <a
                    className="lights-1"
                    href="/tools"
                    onClick={[Function]}
                  >
                    Tools
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
          <div
            className="lights-15"
          >
            <Switch>
              <Route
                component={[Function]}
                computedMatch={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/tools",
                    "url": "/tools",
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "pathname": "/tools",
                    "search": "",
                    "state": undefined,
                  }
                }
                path="/tools"
              >
                <LoadableComponent
                  history={
                    Object {
                      "action": "POP",
                      "block": [Function],
                      "createHref": [Function],
                      "go": [Function],
                      "goBack": [Function],
                      "goForward": [Function],
                      "listen": [Function],
                      "location": Object {
                        "hash": "",
                        "pathname": "/tools",
                        "search": "",
                        "state": undefined,
                      },
                      "push": [Function],
                      "replace": [Function],
                    }
                  }
                  location={
                    Object {
                      "hash": "",
                      "pathname": "/tools",
                      "search": "",
                      "state": undefined,
                    }
                  }
                  match={
                    Object {
                      "isExact": true,
                      "params": Object {},
                      "path": "/tools",
                      "url": "/tools",
                    }
                  }
                  staticContext={Object {}}
                >
                  <Tools
                    history={
                      Object {
                        "action": "POP",
                        "block": [Function],
                        "createHref": [Function],
                        "go": [Function],
                        "goBack": [Function],
                        "goForward": [Function],
                        "listen": [Function],
                        "location": Object {
                          "hash": "",
                          "pathname": "/tools",
                          "search": "",
                          "state": undefined,
                        },
                        "push": [Function],
                        "replace": [Function],
                      }
                    }
                    location={
                      Object {
                        "hash": "",
                        "pathname": "/tools",
                        "search": "",
                        "state": undefined,
                      }
                    }
                    match={
                      Object {
                        "isExact": true,
                        "params": Object {},
                        "path": "/tools",
                        "url": "/tools",
                      }
                    }
                    staticContext={Object {}}
                  >
                    <ul>
                      <li
                        className="lights-10"
                      >
                        <a
                          href="https://expressjs.com/"
                        >
                          Express
                        </a>
                         - server-side rendering
                      </li>
                      <li
                        className="lights-10"
                      >
                        <a
                          href="https://reactjs.org/"
                        >
                          React
                        </a>
                         - component library
                      </li>
                      <li
                        className="lights-10"
                      >
                        <a
                          href="https://reacttraining.com/react-router/"
                        >
                          React Router
                        </a>
                         - server and browser routing
                      </li>
                      <li
                        className="lights-10"
                      >
                        <a
                          href="https://github.com/nytimes/pretty-lights"
                        >
                          Pretty Lights
                        </a>
                         - CSS-in-JS with a reliable API
                      </li>
                      <li
                        className="lights-10"
                      >
                        <a
                          href="https://airbnb.io/enzyme/"
                        >
                          Enzyme
                        </a>
                         - React component testing
                      </li>
                    </ul>
                  </Tools>
                </LoadableComponent>
              </Route>
            </Switch>
          </div>
        </div>
      </App>
    </Router>
  </StaticRouter>
</Capture>
`;

exports[`Test tools route 2`] = `
Array [
  "../Tools",
]
`;
